[gd_scene load_steps=7 format=3 uid="uid://l8qtypmpkp67"]

[ext_resource type="Script" uid="uid://djl02p4ryu04n" path="res://scripts/ui.gd" id="1_5lvy2"]
[ext_resource type="Texture2D" uid="uid://5w26o8iafrk5" path="res://assets/graphics/ui/bullet.png" id="1_b27rl"]
[ext_resource type="Texture2D" uid="uid://36y5txrg6eqv" path="res://assets/graphics/ui/grenade.png" id="2_3wnis"]
[ext_resource type="Theme" uid="uid://dopy58i1f3ugy" path="res://scenes/user_interface/main_theme.tres" id="2_ppfub"]
[ext_resource type="Texture2D" uid="uid://d02asn4ef4fuh" path="res://assets/graphics/ui/progress_bar/bg.png" id="4_r4i4l"]
[ext_resource type="Texture2D" uid="uid://dx1v1h8qh6ptl" path="res://assets/graphics/ui/progress_bar/progress.png" id="5_5lvy2"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_5lvy2")

[node name="AmmoCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.02
anchor_top = 0.98
anchor_right = 0.02
anchor_bottom = 0.98
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="GridContainer" type="GridContainer" parent="AmmoCounter"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -65.0
offset_right = 80.0
grow_vertical = 0
theme_override_constants/h_separation = 20
columns = 2

[node name="LaserCount" type="Label" parent="AmmoCounter/GridContainer"]
layout_mode = 2
theme = ExtResource("2_ppfub")
horizontal_alignment = 1

[node name="GrenadeCount" type="Label" parent="AmmoCounter/GridContainer"]
layout_mode = 2
theme = ExtResource("2_ppfub")
horizontal_alignment = 1

[node name="LaserImg" type="TextureRect" parent="AmmoCounter/GridContainer"]
layout_mode = 2
texture = ExtResource("1_b27rl")
expand_mode = 4

[node name="GrenadeImg" type="TextureRect" parent="AmmoCounter/GridContainer"]
layout_mode = 2
texture = ExtResource("2_3wnis")
expand_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 25

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer"]
layout_mode = 2
value = 30.0
texture_under = ExtResource("4_r4i4l")
texture_progress = ExtResource("5_5lvy2")
